apps/base/jellyfin/jellyfin-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin-ingressroute
  annotations:
    gethomepage.dev/href: "https://${SUBDOMAIN:=jellyfin}.hephaestus.markmk.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "jellyfin"
    gethomepage.dev/description: "Open-source media server"
    gethomepage.dev/app: jellyfin
    gethomepage.dev/group: "Media"
    gethomepage.dev/icon: "https://cdn.jsdelivr.net/gh/selfhst/icons/svg/jellyfin.svg"
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`${SUBDOMAIN:=jellyfin}.hephaestus.markmk.com`)
      kind: Rule
      services:
        - name: jellyfin
          port: 8096
